Handle XI_Enter and XI_Leave events.

These events are now expected and are hitting a NOTREACHED statement.
Add case to handle them but doesn't do anything to avoid this.

BUG=642856

Review-Url: https://codereview.chromium.org/2298953003
Cr-Commit-Position: refs/heads/master@{#416714}

Former-commit-id: a6e7a8cb6df5a0ab7ddc7fe38e279e98ae0bd548